--- a/compose.yaml
+++ b/compose.yaml
@@ -49,7 +49,7 @@
     command: --config /etc/otel/config.yaml
     environment:
       JAEGER_ENDPOINT: "jaeger:4317"
-      APPLICATIONINSIGHTS_CONNECTION_STRING: "InstrumentationKey=384792a9-5408-44f6-adb7-4278c5f4b511;IngestionEndpoint=https://eastus-8.in.applicationinsights.azure.com/;LiveEndpoint=https://eastus.livediagnostics.monitor.azure.com/;ApplicationId=b7d7a2e2-065b-4cc0-bc69-252e27145d30"
+      APPLICATIONINSIGHTS_CONNECTION_STRING: ""
     ports:
       - "1888:1888" # pprof extension
       - "8888:8888" # Prometheus metrics exposed by the Collector
